# local-crawl-post-factory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  啟動本地服務.command
.github/workflows/: ci.yml
browser/: auth.py  backend_driver.py  selector_recipe.py
configs/: article_prompt.zh.md  backend.yaml  crawler.yaml  llm.yaml  scoop_prompt.zh.md  scoring.yaml  watermark.yaml  webui.yaml
core/: audit.py  backend_args.py  cli.py  cluster.py  db.py  errors.py  filesystem.py  io_ndjson.py  jobs.py  library.py  llm.py  manifest.py  pipeline.py  reviewed.py  runs.py  schema.py  scoop_pipeline.py  scoring.py  scoring_config.py  state.py  timeutil.py  validators.py  webui_config.py
cpost/: __init__.py
cpost/browser/: auth.py  backend_driver.py  selector_recipe.py
cpost/cli/: auth_login.py  build_manifest.py  cluster_scoops.py  crawl_posts.py  dedupe_posts.py  discover_sources.py  draft_post.py  generate_article.py  health_check_sources.py  library_ingest.py  maintenance.py  normalize_items.py  publish_post.py  render_caption.py  score_scoops.py  verify_draft.py
cpost/core/: backend_args.py  cli.py  cluster.py  db.py  errors.py  external_search.py  filesystem.py  gossip_crawl.py  io_ndjson.py  library.py  llm.py  manifest.py  output_table.py  pipeline.py  reviewed.py  runs.py  schema.py  scoop_pipeline.py  scoring.py  scoring_config.py  site_roster.py  state.py  url_utils.py  validators.py  webui_config.py
cpost/webui/: _auto_pipeline.py  _helpers.py  app.py
cpost/webui/routers/: _ctx.py  actions.py  crawl.py  dashboard.py  gossip_materials.py  history_audit.py  packages.py  roster.py  scoops.py  settings_auth.py  trash.py
cpost/webui/static/: app.css
cpost/webui/templates/: _audit_table.html  _auth_status.html  _dashboard_stats.html  _gossip_job.html  _history_table.html  _packages_table.html  _scoop_list.html  _sources_list.html  _trash_table.html  audit.html  base.html  dashboard.html  detail.html  gossip_materials.html  history.html  packages.html  (+4 more)
docs/analysis/: 2026-06-18-system-analysis.md
docs/brainstorms/: 2026-06-15-ci-safety-net-requirements.md  2026-06-15-full-upgrade-daily-ops-requirements.md  2026-06-15-local-crawl-post-factory-requirements.md  2026-06-15-project-optimization-requirements.md  2026-06-15-quality-uplift-requirements.md  2026-06-16-auto-pipeline-requirements.md  2026-06-16-perf-maintainability-uplift-requirements.md  2026-06-22-multi-source-aggregation-maturity-requirements.md  2026-06-24-external-search-fulfillment-requirements.md
docs/ideation/: 2026-06-24-open-ideation.md
docs/plans/: 2026-06-15-001-feat-local-crawl-post-factory-plan.md  2026-06-15-002-feat-webui-settings-crawl-stage-plan.md  2026-06-15-003-feat-daily-ops-hardening-control-center-plan.md  2026-06-15-004-feat-webui-comprehensive-optimization-plan.md  2026-06-15-005-opt-crawl-efficiency-and-stability.md  2026-06-15-005-refactor-project-optimization-phased-plan.md  2026-06-15-006-feat-ci-safety-net-plan.md  2026-06-15-007-feat-quality-uplift-plan.md  2026-06-15-008-feat-webui-live-crawl-progress-plan.md  2026-06-16-001-feat-auto-pipeline-plan.md  2026-06-16-002-perf-phase1-runs-batching-retry-cache-plan.md  2026-06-16-003-refactor-webui-app-router-split-plan.md  2026-06-16-004-deep-optimization-master-plan.md  2026-06-18-001-fix-workflow-pipeline-stabilization-plan.md  2026-06-18-002-refactor-standalone-portability-plan.md  2026-06-18-003-feat-fulltext-capture-drop-cover-plan.md  2026-06-18-004-feat-scoop-library-scoring-generation-plan.md  2026-06-18-005-refactor-remove-cover-feature-plan.md  2026-06-18-006-feat-daily-prep-scoop-flow-plan.md  2026-06-22-001-feat-multi-source-aggregation-plan.md  2026-06-22-002-fix-codebase-bug-sweep-plan.md  2026-06-22-002-refactor-package-namespace-cpost-plan.md  2026-06-22-003-feat-maturity-release-hardening-plan.md  2026-06-22-003-refactor-parallel-safe-optimization-plan.md  2026-06-23-001-feat-auto-source-discovery-plan.md  2026-06-23-002-feat-article-format-spec-tags-plan.md  2026-06-23-003-feat-webui-modern-redesign-plan.md  2026-06-23-004-feat-source-list-expand-plan.md  2026-06-24-001-feat-gossip-materials-url-crawl-plan.md  ACTIVE.md
examples/: scheduling.md
inputs/: sample.ndjson
scripts/: demo.sh
src/: auth_login.py  build_manifest.py  cluster_scoops.py  crawl_posts.py  dedupe_posts.py  draft_post.py  generate_article.py  library_ingest.py  normalize_items.py  publish_post.py  render_caption.py  score_scoops.py  select_cover.py  verify_draft.py  watermark_cover.py
templates/: fixed-format.zh.yaml
tests/: conftest.py  mock_admin.py  test_audit.py  test_auth_login.py  test_auto_pipeline.py  test_backend_commands_session.py  test_backend_driver_resilience.py  test_backend_schema.py  test_browser_auth.py  test_browser_flow.py  test_build_manifest.py  test_cli_contract.py  test_cli_entry_points.py  test_cluster.py  test_cluster_scoops.py  test_cluster_scoops_cli_contract.py  test_crawl_posts.py  test_db.py  test_dedupe_posts.py  test_dedupe_posts_cli_contract.py  test_discover_sources.py  test_draft_post_cli_contract.py  test_external_search.py  test_filesystem.py  test_generate_article.py  test_generation_pipeline.py  test_gossip_crawl.py  test_health_check_sources.py  test_io_ndjson.py  test_jobs.py  test_library_ingest.py  test_library_store.py  test_llm.py  test_maintenance.py  test_models_validators.py  test_normalize_items.py  test_output_table.py  test_packaging_metadata.py  test_pipeline.py  test_pipeline_public_api.py  (+36 more)
webui/: _auto_pipeline.py  _helpers.py  app.py
webui/routers/: _ctx.py  actions.py  crawl.py  dashboard.py  history_audit.py  packages.py  scoops.py  settings_auth.py  trash.py
webui/static/: app.css  htmx.min.js
webui/templates/: _audit_table.html  _auth_status.html  _dashboard_stats.html  _history_table.html  _job_status.html  _packages_table.html  _scoop_list.html  _sources_list.html  _today_job.html  _trash_table.html  audit.html  base.html  dashboard.html  detail.html  history.html  packages.html  settings.html  today.html  trash.html
(+5 files in other folders)
