[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-crawl-post-factory"
version = "0.2.3.0"
description = "Local-first, CLI-first crawl-to-post automation pipeline for owned/private sites."
requires-python = ">=3.11"
# Upper bounds cap the next major so a fresh `pip install` stays reproducible and
# can't silently pull a breaking release (e.g. the Starlette 1.0 jump). Bounds are
# set to include the currently-tested versions; raise them deliberately when moving up.
dependencies = [
    "Scrapy>=2.11,<3",
    "Pillow>=10.0,<12",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
browser = ["playwright>=1.40,<2"]
webui = ["fastapi>=0.110,<1", "uvicorn[standard]>=0.27,<1", "jinja2>=3.1,<4", "python-multipart>=0.0.9,<1"]
dev = ["pytest>=8.0,<10", "httpx>=0.27,<1", "ruff~=0.15.10", "pytest-cov>=4.0,<8", "mypy~=1.18.2", "types-PyYAML>=6.0", "pre-commit>=3.5,<5"]

[project.scripts]
auth-login = "src.auth_login:main"
crawl-post-webui = "webui.app:run"
crawl-posts = "src.crawl_posts:main"
normalize-items = "src.normalize_items:main"
library-ingest = "src.library_ingest:main"
dedupe-posts = "src.dedupe_posts:main"
render-caption = "src.render_caption:main"
select-cover = "src.select_cover:main"
watermark-cover = "src.watermark_cover:main"
build-manifest = "src.build_manifest:main"
draft-post = "src.draft_post:main"
verify-draft = "src.verify_draft:main"
publish-post = "src.publish_post:main"

[tool.setuptools]
packages = ["src", "core", "browser", "webui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: subprocess/network/real-timeout tests (excluded from fast-run)",
    "browser: Playwright end-to-end browser tests",
    "integration: multi-stage integration tests (pipeline orchestration)",
    "subprocess: tests that spawn child processes (Scrapy crawl worker)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Lock ruff's current default rule set; the tree already passes these at 0.15.x.
# Line-length (E501) and import sorting (I) are intentionally not enforced this
# round (I flags 31 pre-existing import blocks) -- see the plan's deferred tuning note.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
# Blocking typecheck gate. The tree is currently 0-error under this config;
# stricter flags are added gradually in dedicated typing passes.
python_version = "3.11"
files = ["core", "src", "browser", "webui"]
ignore_missing_imports = true   # Scrapy / Playwright ship no type stubs
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# core/ is the correctness-critical zone -- hold it a notch higher than src/browser/webui.
# Kept to high-signal flags that add zero noise today but raise the bar for new code.
module = "core.*"
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
