[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-crawl-post-factory"
version = "0.3.0"
description = "Local-first, CLI-first crawl-to-post automation pipeline for owned/private sites."
readme = "README.md"
license = { text = "Proprietary — All rights reserved" }
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = ">=3.11"
# Upper bounds cap the next major so a fresh `pip install` stays reproducible and
# can't silently pull a breaking release (e.g. the Starlette 1.0 jump). Bounds are
# set to include the currently-tested versions; raise them deliberately when moving up.
dependencies = [
    "Scrapy>=2.11,<3",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
browser = ["playwright>=1.40,<2"]
webui = ["fastapi>=0.110,<1", "uvicorn[standard]>=0.27,<1", "jinja2>=3.1,<4", "python-multipart>=0.0.9,<1"]
dev = ["pytest>=8.0,<10", "httpx>=0.27,<1", "ruff~=0.15.10", "pytest-cov>=4.0,<8", "mypy~=1.18.2", "types-PyYAML>=6.0", "pre-commit>=3.5,<5"]

[project.scripts]
auth-login = "cpost.cli.auth_login:main"
crawl-post-webui = "cpost.webui.app:run"
crawl-posts = "cpost.cli.crawl_posts:main"
normalize-items = "cpost.cli.normalize_items:main"
library-ingest = "cpost.cli.library_ingest:main"
cluster-scoops = "cpost.cli.cluster_scoops:main"
score-scoops = "cpost.cli.score_scoops:main"
dedupe-posts = "cpost.cli.dedupe_posts:main"
render-caption = "cpost.cli.render_caption:main"
build-manifest = "cpost.cli.build_manifest:main"
generate-article = "cpost.cli.generate_article:main"
draft-post = "cpost.cli.draft_post:main"
verify-draft = "cpost.cli.verify_draft:main"
publish-post = "cpost.cli.publish_post:main"

[tool.setuptools.packages.find]
include = ["cpost*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: subprocess/network/real-timeout tests (excluded from fast-run)",
    "browser: Playwright end-to-end browser tests",
    "integration: multi-stage integration tests (pipeline orchestration)",
    "subprocess: tests that spawn child processes (Scrapy crawl worker)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Lock ruff's current default rule set; the tree already passes these at 0.15.x.
# Line-length (E501) and import sorting (I) are intentionally not enforced this
# round (I flags 31 pre-existing import blocks) -- see the plan's deferred tuning note.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
# Blocking typecheck gate. The tree is currently 0-error under this config;
# stricter flags are added gradually in dedicated typing passes.
python_version = "3.11"
files = ["cpost"]
ignore_missing_imports = true   # Scrapy / Playwright ship no type stubs
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# cpost.core and cpost.cli are the correctness-critical zones -- hold them a notch
# higher than browser/webui. cpost.cli holds the irreversible publish/draft commands,
# so its argument and return contracts are worth pinning down.
module = ["cpost.core.*", "cpost.cli.*"]
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
